dinesykmeldte-kafka/network-policy-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dinesykmeldte-backend-db-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.234.182/32
  podSelector:
    matchLabels:
      app: dinesykmeldte-kafka
  policyTypes:
    - Egress
